--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h2>
-        <h3>h3 Eu sou o corpo</h3>
-        <h4>h4 Eu sou o corpo</h4>
-        <h5>h5 Eu sou o corpo</h5>
-        <h6>h6 Eu sou o corpo</h6>
-    </body>
-    <ol>
-        <li>Café</li>
-        <li>Chá</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Café</li>
-        <li>Chá</li>
-        <li>Leite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Novo Desenvolvedor</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">New Dev</p>
+                    <p class="profession">Desenvolvedor</p>
+                </div>
+                <div class="contact-info">
+                  <p class="left-title">Contato</p>
+                  <ul>
+                    <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
+                    <li><i class="fa fa-envelope"></i>newdev@gmail.com</li>
+                    <li><i class="fa fa-github"></i>newdev0565180</li>
+                    <li><i class="fa fa-globe"></i>www.newdev.com</li>
+                  </ul>  
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git, GitHub</p></li>
+                        <li><p>Windows</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        </section>
+            </section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Um pouco mais sobre o que faço atualmente e como venho me preparando para entrar em um novo mercado. <br>
+                        <br> Minha trajetória estudantil e outros cursos que fiz para estar preparado para entrar em uma nova área de atuação. <br>
+                    </p>
+                </section>
+            </div>
+        </section>
+        </section>
+    </main>    
+</body>
 </html>
