index html dia 3

--- a/index.html
+++ b/index.html
@@ -41,11 +41,36 @@
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
-                        Um pouco mais sobre o que faço atualmente e como venho me preparando para entrar em um novo mercado. <br>
-                        <br> Minha trajetória estudantil e outros cursos que fiz para estar preparado para entrar em uma nova área de atuação. <br>
+                        Olá sou o Novo Desenvolvedor.<br>
+                        <br> Um pouco mais sobre o que faço.
+                        <br> Quais são minhas competências
                     </p>
                 </section>
             </div>
+        <section class="experience gap">
+            <div class="right-title">Experiência</div>
+            <div class="experience-contents">
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 01</p>
+                    <p class="exp-time-period">2021-Present</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Desenvolvedor</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades da empresa 01
+                    </p>
+                </div>
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 02</p>
+                    <p class="exp-time-period">2017-2021</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Desenvolvedor</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades da empresa 02
+                    </p>
+                </div>
+            </div>   
         </section>
         </section>
     </main>    
