--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -18,25 +20,29 @@
                     <p class="profession">Desenvolvedor</p>
                 </div>
                 <div class="contact-info">
-                  <p class="left-title">Contato</p>
-                  <ul>
-                    <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
-                    <li><i class="fa fa-envelope"></i>newdev@gmail.com</li>
-                    <li><i class="fa fa-github"></i>newdev0565180</li>
-                    <li><i class="fa fa-globe"></i>www.newdev.com</li>
-                  </ul>  
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
+                        <li><i class="fa fa-envelope"></i>newdev@gmail.com</li>
+                        <li><i class="fa fa-github"></i>newdev0565180</li>
+                        <li><i class="fa fa-globe"></i>www.newdev.com</li>
+                    </ul>
                 </div>
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git, GitHub</p></li>
-                        <li><p>Windows</p></li>
+                        <li>
+                            <p>HTML, CSS, Git, GitHub</p>
+                        </li>
+                        <li>
+                            <p>Windows</p>
+                        </li>
                     </ul>
                 </div>
             </section>
         </section>
         </section>
-            </section class="right-section">
+        <section class="right-section">
             <div class="right-section-contents">
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
@@ -47,32 +53,57 @@
                     </p>
                 </section>
             </div>
-        <section class="experience gap">
-            <div class="right-title">Experiência</div>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 01</p>
-                    <p class="exp-time-period">2021-Present</p>
+            <section class="experience gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvolvedor</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvolvedor</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 02
+                        </p>
+                    </div>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Desenvolvedor</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades da empresa 01
-                    </p>
-                </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 02</p>
-                    <p class="exp-time-period">2017-2021</p>
-                </div>
-                <div class="exp-right">
-                    <p class="exp-position">Desenvolvedor</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades da empresa 02
-                    </p>
-                </div>
-            </div>   
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">                    
+                    <div class="education-left">
+                        <p class="education-school-name">PUC</p>
+                        <p class="education-time-period">2021-2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em Engenharia de Software
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">USP</p>
+                        <p class="education-time-period">2015-2018</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia da Computação</p>
+                        <p class="education-desc">
+                            Graduação em Engenharia da Computação
+                        </p>
+                </div>    
+            </section>
         </section>
-        </section>
-    </main>    
+    </main>
 </body>
+
 </html>
