--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Desenvolvedor</title>
+    <title>Matheus Alves</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,16 +16,16 @@
             <section class="left-section-contents">
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
-                    <p class="name">New Dev</p>
+                    <p class="name">Matheus da Cunha Alves</p>
                     <p class="profession">Desenvolvedor</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
-                        <li><i class="fa fa-envelope"></i>newdev@gmail.com</li>
-                        <li><i class="fa fa-github"></i>newdev0565180</li>
-                        <li><i class="fa fa-globe"></i>www.newdev.com</li>
+                        <li><i class="fa fa-phone"></i>+55 11 97057-3298</li>
+                        <li><i class="fa fa-envelope"></i>matheus94.ma@gmail.com</li>
+                        <li><i class="fa fa-github"></i>https://github.com/Mat9408</li>
+                        <li><i class="fa fa-linkedin"></i>www.linkedin.com/in/matheus-alves-305b15149</li>
                     </ul>
                 </div>
                 <div class="skills">
@@ -35,7 +35,13 @@
                             <p>HTML, CSS, Git, GitHub</p>
                         </li>
                         <li>
-                            <p>Windows</p>
+                            <p>Python</p>
+                        </li>
+                        <li>
+                            <p>SO Windows, Pacote Office</p>
+                        </li>
+                        <li>
+                            <p>Photoshop</p>
                         </li>
                     </ul>
                 </div>
@@ -47,9 +53,7 @@
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
-                        Olá sou o Novo Desenvolvedor.<br>
-                        <br> Um pouco mais sobre o que faço.
-                        <br> Quais são minhas competências
+                        Estudante de Sistemas de Informação com previsão de conclusão do curso em 2025. Em busca de estágio ou vagas JR na área de SI focando no desenvolvimento de códigos e análise de banco de dados corporativos. Vivência internacional através de intercâmbio realizado em 2018 em Dublin, Irlanda. Bacharelado em Jornalismo no ano de 2017. Disponibilidade para viagens. Habilitação categoria B.<br>
                     </p>
                 </section>
             </div>
@@ -57,23 +61,17 @@
                 <div class="right-title">Experiência</div>
                 <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 01</p>
-                        <p class="exp-time-period">2021-Present</p>
+                        <p class="exp-company-name">UniFOA</p>
+                        <p class="exp-time-period">Julho 2016 - Setembro 2016</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Desenvolvedor</p>
+                        <p class="exp-position">Jornalista Estagiário</p>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades da empresa 01
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Empresa 02</p>
-                        <p class="exp-time-period">2017-2021</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Desenvolvedor</p>
-                        <p class="exp-desc">
-                            Descreva aqui as principais atividades da empresa 02
+                            <li>Assessoria de Comunicação</li>
+                            <li>Produção de Pautas para Impresso</li>
+                            <li>Produção de conteúdo para plataformas digitais</li>
+                            <li>Cobertura de eventos</li>
+                            <li>Gerenciamento das mídias sociais</li>
                         </p>
                     </div>
                 </div>
@@ -82,25 +80,61 @@
                 <div class="right-title">Formação Acadêmica</div>
                 <div class="education-contents">                    
                     <div class="education-left">
-                        <p class="education-school-name">PUC</p>
-                        <p class="education-time-period">2021-2023</p>
+                        <p class="education-school-name">UGB/FERP</p>
+                        <p class="education-time-period">2022-2025</p>
                     </div>
                     <div class="education-right">
-                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-subject">Sistemas de Informação</p>
                         <p class="education-desc">
-                            Pós graduação em Engenharia de Software
+                            Graduação em Sistemas de Informação com previsão de conclusão em 2025
                         </p>
                     </div>
                     <div class="education-left">
-                        <p class="education-school-name">USP</p>
-                        <p class="education-time-period">2015-2018</p>
+                        <p class="education-school-name">UniFOA</p>
+                        <p class="education-time-period">2014-2017</p>
                     </div>
                     <div class="education-right">
-                        <p class="education-subject">Engenharia da Computação</p>
+                        <p class="education-subject">Jornalismo</p>
                         <p class="education-desc">
-                            Graduação em Engenharia da Computação
+                            Graduação em Jornalismo
+                        </p>               
+                    </div>    
+                </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Novembro de 2021 - até o momento </p> 
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Profissão: Analista de Dados</p>
+                        <p class="awards-desc">
+                            Curso de aprofundamento em análise de dados pela EBAC
                         </p>
-                </div>    
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Novembro de 2021 - até o momento </p> 
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Introdução à Programação</p>
+                        <p class="awards-desc">
+                            Curso de iniciação à área de programação pela EBAC
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">Emerald Cultural Institute</p>
+                        <p class="awards-time-period">Março de 2018 - Agosto de 2018 </p> 
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">General English Course</p>
+                        <p class="awards-desc">
+                            Curso de língua inglesa durante intercâmbio realizado em Dublin, Irlanda no ano de 2018
+                        </p>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
