--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="education-right">
                         <p class="education-subject">Jornalismo</p>
                         <p class="education-desc">
-                            Graduação em Jornalismo
+                            Graduação em Jornalismo concluída no ano de 2017
                         </p>               
                     </div>    
                 </div>
